--- a/vignettes/haPLOType-walkthrough.Rmd
+++ b/vignettes/haPLOType-walkthrough.Rmd
@@ -42,25 +42,21 @@ user input panel, the panel with the light gray background.
 
     a. **field Selection tab:** If the "> field selection" is selected, then the user input panel will include dropdown boxes that let you choose a group, locus, or individual(s) that you wish to focus on (this choice affects what is shown in different plots and outputs,
 etc.) It also includes "backwards-and-forwards" buttons, "<" and ">", that let you step individually through loci (the buttons to the right* of "Locus") or through individuals (fish in this case---the buttons to the
-right* of the "Indiv" dropdown box.)
+right* of the "Indiv" dropdown box.)    
 
-        These are very useful when you want to work your way through each locus individually and choose those that do (and do not) appear to be reliable enough to include in a
+    These are very useful when you want to work your way through each locus individually and choose those that do (and do not) appear to be reliable enough to include in a
 panel of amplicons. * - Note: the location and relative position of each button might change pending on the width of the viewing window.
 
     b. **read criteria tab:** In the "+ read criteria" tab, you are given the choice to define the minimal read depth and minimal allelic ratio that microhaplotypes must have to pass through the read depth and allelic ratio filters.
 
-        * _Minimal Read Depth_ defines the minimal number of reads that are observed for a particular microhaplotype in a single individual's locus. It can only take values greater than or equal to 0.
-        * _Allelic ratio_ or _allelic balance_ is defined as the ratio of the observed read depth of a microhaplotype to the read depth of the most common microhaplotype in an individual at a locus.
+      * _Minimal Read Depth_ defines the minimal number of reads that are observed for a particular microhaplotype in a single individual's locus. It can only take values greater than or equal to 0.
+      * _Allelic ratio_ or _allelic balance_ is defined as the ratio of the observed read depth of a microhaplotype to the read depth of the most common microhaplotype in an individual at a locus.
 
         > Ideally, for homozgous individuals, you expect to see the true microhaplotype to have a large read depth and an allelic ratio of one. False or noisy microhaplotypes will have low read depth and allelic ratio close to zero.
 
         > For an individual that is truly heterozygous, the two true microhaplotypes ideally should have a large and similar number of reads, which means that their allelic ratio should be at or near one. The _Minimal Allelic Ratio_ defines a filter that removes reads from haplotypes with allelic ratio less than the minimum.  It must be between 0 and 1.
 
-        Once you set up these two criteria, you  _apply_ them with the "apply" button.
-
-        You can also save these criteria if you want to visit them in the future by clicking the "save" button.
-
-        There are other options that located on the right hand side that gives you more ways to define filtering criteria. Details for each of the options are shown if you hover your pointer over it.
+        Once you set up these two criteria, you  _apply_ them with the "apply" button. You can also save these criteria if you want to visit them in the future by clicking the "save" button.There are other options that located on the right hand side that gives you more ways to define filtering criteria. Details for each of the options are shown if you hover your pointer over it.
 
     c. **locus annotation:** This tab is for users to keep track of whether a certain locus should be retained based on its quality or other attributes. This is most useful when a particular locus has been chosen under the "field selection" panel. There is also a small textbox that lets you insert any comment regarding the locus group. Remember to press the save button for submission. All of this annotation information can be retreived under the table selection for "locus annotation" under `Output` tab.
 
